@@ -238,26 +238,13 @@ function buildFigure(obj)
         'Parent', obj.statusPanel, ...
         'Units', 'Pixels', ...
         'String', 'Laser off', ...
-        'Position', [505, 18, 70, 17], ...
+        'Position', [505, 12, 70, 17], ...
         'Style','check', ... 
         'ToolTip', 'Turn off laser when acquisition finishes', ...
         'ForegroundColor', 'w', ...
         'BackgroundColor', [1,1,1]*0.075, ...
         'Value', ~obj.model.leaveLaserOn, ...
         'Callback', @obj.updateLeaveLaserOn);
-
-
-    obj.checkBoxCutLast = uicontrol(...
-        'Parent', obj.statusPanel, ...
-        'Units', 'Pixels', ...
-        'Style','check', ... 
-        'String', 'Slice last', ...
-        'Position', [505, 2, 70, 17], ...
-        'ToolTip', 'Slice the final imaged section off the block', ...
-        'ForegroundColor', 'w', ...
-        'BackgroundColor', [1,1,1]*0.075, ...
-        'Value', obj.model.sliceLastSection, ...
-        'Callback', @obj.updateSliceLastSection);
 
 
         % Ensure any another recipe-related things are up to date
